tests/ui/fail/traitdef_missing_body.rs
use coinduction::*;

// This should fail: #[traitdef] requires a trait body
#[traitdef]
trait MissingBody;

fn main() {}